# pokemon-fusion-api-rs

./: Cargo.toml  README.md
assets/custom-fusions/: list_files.bat
src/: main.rs
