[package]
name = "pokemon-fusion-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features=["macros"]}
listenfd = "1.0.1"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.107"
reqwest = {version = "0.11.22", features = ["json","gzip","deflate"]}